0.4	get pairwise weights from the survey design object

        Fix for multiple random terms -- restructuring of Z was wrong

	Allow for removal of missing data

0.3	Make a start on replicate-weights variances.

0.2   	Allow multiple random terms to get independent random effects

	Profile out the residual variance as well

0.1 	Added standard errors and a slightly bogus example